# ask_on_data

./: .gitignore  README.md  pyproject.toml
src/ask_on_data/: main.py
src/ask_on_data/agent/: faq_agent.py  hello_world.py  holding_agent.py
src/ask_on_data/chain/: first_responder_chain.py
src/ask_on_data/graph/: graph.py
src/ask_on_data/model/: repository.py
src/ask_on_data/node/: faq_service.py  first_responder.py  fixed_deposit_service.py  holdings_service.py
src/ask_on_data/router/: context_router.py
src/ask_on_data/state/: graph_state.py
src/ask_on_data/tool/: add_number.py  faq.py  holding.py  sample_v1.py
src/resources/: faq.csv
